# vector_constrained

./: CMakeLists.txt  example.cpp  readme.md  vector_constrained.cpp
